fix(DataBase): création des classes, des scripts et des migrations

--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -36,5 +36,10 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     }
+  },
+  "runtimeOptions": {
+    "configProperties": {
+       "System.Globalization.Invariant": false
+    }
   }
 }
