--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -23,7 +23,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7284;http://localhost:5221",
+      "applicationUrl": "https://localhost:7284;",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
